@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man
-.TH UNITILE2D  "1" " " "unitile2d: Antiprism 0.30 - http://www.antiprism.com" "User Commands"
+.TH UNITILE2D  "1" " " "unitile2d: Antiprism 0.30.99 - http://www.antiprism.com" "User Commands"
 .SH NAME
 unitile2d - make uniform tilings on a surface
 .SH SYNOPSIS
